* 1.6.8.6 (2014-03-29)
	* New features:
		- Reduce round trip time for single request(2014-04-04)
	* Incompatible changes:
	* Bug fixes:
		- Redesign network flow, support very large batch commands
		- Fix bug on ssdb-dump that lose data, print out error message(2014-04-05)

* 1.6.8.5 (2014-03-05)
	* New features:
		- Add qslice(lrange), qget(lindex, lget) commands.
		- Add getset, setnx commands.
	* Incompatible changes:
		- Queue/List data will be replicated(sync) to slaves.
	* Bug fixes:
		- Fix ssdb::Client::connect() possible memory leak
		- Fix ttl overflow bug
		- Fix nodejs api bug on binary data(2014-03-27)
