@@ -1,6 +1,6 @@
 # encoding=utf-8
 # Generated by cpy
-# 2014-03-05 18:46:20.052074
+# 2014-04-06 18:30:46.014721
 import os, sys
 from sys import stdin, stdout
 
@@ -105,7 +105,7 @@ class SSDB(object):
 					pass
 					return SSDB_Response(resp[0])
 				break
-			if False or ((cmd) == 'setnx') or ((cmd) == 'incr') or ((cmd) == 'decr') or ((cmd) == 'zincr') or ((cmd) == 'zdecr') or ((cmd) == 'hincr') or ((cmd) == 'hdecr') or ((cmd) == 'hsize') or ((cmd) == 'zsize') or ((cmd) == 'qsize') or ((cmd) == 'zget') or ((cmd) == 'zrank') or ((cmd) == 'zrrank') or ((cmd) == 'hclear') or ((cmd) == 'zclear') or ((cmd) == 'qclear'):
+			if False or ((cmd) == 'setnx') or ((cmd) == 'incr') or ((cmd) == 'decr') or ((cmd) == 'zincr') or ((cmd) == 'zdecr') or ((cmd) == 'hincr') or ((cmd) == 'hdecr') or ((cmd) == 'hsize') or ((cmd) == 'zsize') or ((cmd) == 'qsize') or ((cmd) == 'zget') or ((cmd) == 'zrank') or ((cmd) == 'zrrank') or ((cmd) == 'zsum') or ((cmd) == 'zcount') or ((cmd) == 'zavg') or ((cmd) == 'zremrangebyrank') or ((cmd) == 'zremrangebyscore') or ((cmd) == 'hclear') or ((cmd) == 'zclear') or ((cmd) == 'qclear'):
 				pass
 
 				if resp[0]=='ok':
@@ -115,7 +115,13 @@ class SSDB(object):
 						pass
 						try:
 							pass
-							val = int(resp[1])
+
+							if cmd=='zavg':
+								pass
+								val = float(resp[1])
+							else:
+								pass
+								val = int(resp[1])
 							return SSDB_Response('ok', val)
 						except Exception , e:
 							pass
