@@ -1,6 +1,7 @@
 * 1.6.8.6 (2014-03-29)
 	* New features:
 		- Reduce round trip time for single request(2014-04-04)
+		- Add zcount, zsum, zavg, zRemRangeByScore, zRemRangeByRank commands(2014-04-05)
 	* Incompatible changes:
 	* Bug fixes:
 		- Redesign network flow, support very large batch commands
